<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/report_list_item_padding"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/report_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_title"
            android:textSize="@dimen/report_list_item_text"
            app:drawableStartCompat="@drawable/assignment"
            />

        <ImageView
            android:id="@+id/confirmed_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check_circle"
            app:tint="@color/checked_green"
            android:contentDescription="@string/confirmed"
            android:visibility="gone"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/report_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_date" />

    <TextView
        android:id="@+id/report_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_author" />
</LinearLayout>