<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <ImageView
            android:id="@+id/dialog_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/report_image_description"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <TextView
            android:id="@+id/dialog_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin">

            <Button
                android:id="@+id/upvote_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_report" />

            <TextView
                android:id="@+id/upvote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:text="@string/_0_confirmations" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
