<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_report_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/report_form_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.ReportFormFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_list_margin_top"
            android:layout_marginEnd="@dimen/report_list_margin_bottom"
            android:text="@string/report_form_title"
            android:textSize="@dimen/report_list_text_size"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/report_title_layout"
            android:layout_width="@dimen/report_form_text_input_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/report_form_text_input_margin"
            app:boxBackgroundMode="filled"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:startIconDrawable="@drawable/car">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/report_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/report_title_hint"
                android:inputType="textCapSentences|textAutoCorrect"
                android:paddingStart="@dimen/report_form_text_input_padding_start"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/report_location_layout"
            android:layout_width="@dimen/report_form_text_input_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/report_form_text_input_margin_start"
            android:layout_marginTop="@dimen/report_form_text_input_margin_top"
            android:layout_marginEnd="@dimen/report_form_text_input_margin_end"
            app:boxBackgroundMode="filled"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/report_title_layout"
            app:startIconDrawable="@drawable/location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/report_location_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/report_location_hint"
                android:inputType="textCapSentences|textPostalAddress|textAutoCorrect"
                android:paddingStart="@dimen/report_form_text_input_padding_start" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/report_date_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/report_form_text_input_margin_start"
            android:layout_marginTop="@dimen/report_form_text_input_margin_top"
            android:layout_marginEnd="@dimen/report_form_text_input_margin_end"
            app:boxBackgroundMode="filled"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/report_location_layout"
            app:startIconDrawable="@drawable/calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/report_date_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/report_date_hint"
                android:inputType="datetime"
                android:paddingStart="@dimen/report_form_text_input_padding_start"
                tools:text="@string/report_date_default_input"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/report_type_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/report_form_text_input_margin_start"
            android:layout_marginTop="@dimen/report_form_text_input_margin_top"
            android:layout_marginEnd="@dimen/report_form_text_input_margin_end"
            android:hint="@string/report_type_hint"
            app:boxBackgroundMode="filled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/report_date_layout"
            app:startIconDrawable="@drawable/croissant">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/report_type_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textAutoCorrect"
                android:paddingStart="@dimen/report_form_text_input_padding_start" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/report_description_layout"
            android:layout_width="@dimen/report_form_text_input_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/report_form_text_input_margin_start"
            android:layout_marginTop="@dimen/report_form_text_input_margin_top"
            android:layout_marginEnd="@dimen/report_form_text_input_margin_end"
            app:boxBackgroundMode="filled"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/report_type_layout"
            app:startIconDrawable="@drawable/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/report_description_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/report_form_text_input_height"
                android:hint="@string/report_description_hint"
                android:inputType="textMultiLine|textAutoCorrect"
                android:paddingStart="@dimen/report_form_text_input_padding_start" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/button_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_form_text_input_margin_top"
            android:gravity="center"
            android:orientation="horizontal"
            app:singleSelection="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/report_description_layout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severity_minor"
                app:backgroundTint="@color/toggle_bg"
                android:textColor="@color/toggle_txt"
                app:strokeColor="?attr/colorOutline"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_moderate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severity_moderate"
                app:backgroundTint="@color/toggle_bg"
                android:textColor="@color/toggle_txt"
                app:strokeColor="?attr/colorOutline"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severity_major"
                app:backgroundTint="@color/toggle_bg"
                android:textColor="@color/toggle_txt"
                app:strokeColor="?attr/colorOutline"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            android:layout_width="@dimen/report_form_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/report_form_button_margin_top"
            android:layout_marginBottom="@dimen/report_form_button_margin_bottom"
            android:text="@string/submit_btn"
            android:textSize="@dimen/report_form_button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_toggle_group" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>